# rocket-agent-system

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: orchestrator.py
src/mcp_server/: physics_models.py  server.py
tests/: test_rocket_agent.py
