[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocket_agent_system"
version = "0.1.0"
description = "Agentic design system for rocket propulsion using MCP, LangGraph, and Pydantic for deterministic physics evaluation."
readme = "README.md"
authors = [
    { name = "Author", email = "author@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "langgraph",
    "mcp"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
